--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Animate CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"> -->
     <!-- ... Google Material Icon ... -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
@@ -117,34 +117,24 @@
                     </p>
                 </div>
 
-                <h2 class="h4 mb-4 animate__animated animate__fadeInUp">Here's what participants in AIC 2025 can look
-                    forward to:</h2>
+                <p class="mb-4">Here's what participants in AIC 2025 can look forward to:</p>
 
                 <ul class="benefits-list">
-                    <li class="benefit-item animate__animated animate__fadeInLeft">
-                        <div class="benefit-content">
-                            <i class="material-icons me-3">insights</i>
-                            <span>Deep insights in capital markets investing from industry experts from CGS
-                                International and
-                                local stock exchanges</span>
-                        </div>
+                    <li>
+                        <span>Deep insights in capital markets investing from industry experts from CGS
+                            International and
+                            local stock exchanges</span>
                     </li>
-                    <li class="benefit-item animate__animated animate__fadeInLeft" style="animation-delay: 0.2s;">
-                        <div class="benefit-content">
-                            <i class="material-icons me-3">school</i>
-                            <span>Access to CGS Academy - an e-learning platform dedicated to providing a holistic
-                                learning
-                                experience on topics such as Basic Financial Literacy, Technical Analysis, and
-                                Sustainable
-                                Finance</span>
-                        </div>
+                    <li>
+                        <span>Access to CGS Academy - an e-learning platform dedicated to providing a holistic
+                            learning
+                            experience on topics such as Basic Financial Literacy, Technical Analysis, and
+                            Sustainable
+                            Finance</span>
                     </li>
-                    <li class="benefit-item animate__animated animate__fadeInLeft" style="animation-delay: 0.4s;">
-                        <div class="benefit-content">
-                            <i class="material-icons me-3">trending_up</i>
-                            <span>Hands-on practice with a demo trading account to hone investment skills, and compete
-                                for attractive cash prizes totalling more than $36,000</span>
-                        </div>
+                    <li>
+                        <span>Hands-on practice with a demo trading account to hone investment skills, and compete
+                            for attractive cash prizes totalling more than $36,000</span>
                     </li>
                 </ul>
 
@@ -166,7 +156,7 @@
     <section class="path-section">
         <div class="container">
             <div class="path-header">
-                <h2 class="scroll-animation" data-animation="animate__fadeInDown">The Path To Victory</h2>
+                <h3>The Path To Victory</h3>
             </div>
 
             <div class="path-description scroll-animation" data-animation="animate__fadeIn">
@@ -183,7 +173,7 @@
             <div class="table-responsive d-none d-md-block">
                 <table class="criteria-table">
                     <tr class="scroll-animation" data-animation="animate__fadeInDown">
-                        <th style="visibility: hidden;"></th>
+                        <th></th>
                         <th>COUNTRY LEVEL</th>
                         <th>REGIONAL LEVEL</th>
                     </tr>
@@ -365,8 +355,8 @@
             </div>
 
             <div class="criteria-button-container text-center">
-                <a href="assets/doc/AIC_Grading_Criteria_2024.pdf" target="_blank"
-                    class="btn criteria-btn scroll-animation" data-animation="animate__fadeInUp">
+                <a href="assets/doc/AIC_Grading_Criteria_2024.pdf" target="_blank" class="criteria-btn scroll-animation"
+                    data-animation="animate__fadeInUp">
                     JUDGING CRITERIA
                 </a>
             </div>
@@ -441,7 +431,7 @@
             </div>
 
             <div class="guide-cta text-center">
-                <a href="assets/doc/AIC User Guide_FINAL.pdf" target="_blank" class="btn guide-btn scroll-animation"
+                <a href="assets/doc/AIC User Guide_FINAL.pdf" target="_blank" class="guide-btn scroll-animation"
                     data-animation="animate__fadeInUp">
                     <span>TRADING PLATFORM GUIDE</span>
                 </a>
@@ -456,7 +446,7 @@
     </footer>
 
     <!-- Custom JS -->
-    
+
     <script src="assets/js/index.js"></script>
     <script src="assets/js/scroll-animation.js"></script>
 
