--- a/contact_us.html
+++ b/contact_us.html
@@ -11,7 +11,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Animate CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"> -->
     <!-- ... Google Material Icon ... -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
@@ -165,7 +165,7 @@
                     </div>
                     <div class="contact-details">
                         <h3>Philippines</h3>
-                        <p class="pending-text">Coming Soon</p>
+                        <p class="pending-text">&lt;pending&gt;</p>
                     </div>
                 </div>
             </div>
