--- a/country/malaysia.html
+++ b/country/malaysia.html
@@ -11,7 +11,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Animate CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"> -->
     <!-- ... Google Material Icon ... -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
@@ -135,22 +135,22 @@
                     </tr>
                     <tr>
                         <td>5th Place</td>
-                        <td>-</td>
+                        <td></td>
                         <td>MYR 1,000</td>
                     </tr>
                     <tr>
                         <td>6th - 15th Place</td>
-                        <td>-</td>
+                        <td></td>
                         <td>MYR 500 each</td>
                     </tr>
                     <tr>
                         <td>16th - 25th Place</td>
-                        <td>-</td>
+                        <td></td>
                         <td>MYR 300 each</td>
                     </tr>
                     <tr>
                         <td>26th - 35th Place</td>
-                        <td>-</td>
+                        <td></td>
                         <td>MYR 200 each</td>
                     </tr>
                 </table>
@@ -188,7 +188,7 @@
                 </div>
 
                 <div class="partner-section">
-                    <h2 class="scroll-animation" data-animation="animate__fadeInUp">Supported By:</h2>
+                    <h2 class="scroll-animation" data-animation="animate__fadeInUp">Supported by:</h2>
                     <div class="partners-grid mt-5">
                         <div class="row align-items-start g-4">
                             <!-- ... partner items ... -->
@@ -199,7 +199,7 @@
                 <div class="uni-partner-section">
                     <h2 class="scroll-animation" data-animation="animate__fadeInUp">University Partners</h2>
                     <div class="uni-partners-grid mt-5">
-                        <div class="row g-4">
+                        <div class="row g-0 m-0">
                             <!-- Will be populated by JavaScript -->
                         </div>
                     </div>
