--- a/tc.html
+++ b/tc.html
@@ -11,7 +11,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Animate CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"> -->
     <!-- ... Google Material Icon ... -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
@@ -152,9 +152,9 @@
                     </ol>
                 </div>
 
-                <div class="criteria-button-container text-center">
+                <div class="criteria-button-container text-center mt-5">
                     <a href="assets/doc/Investment_Challenge_T&Cs.pdf" target="_blank"
-                        class="btn tc-btn scroll-animation" data-animation="animate__fadeInUp">
+                        class="tc-btn scroll-animation" data-animation="animate__fadeInUp">
                         FULL TERMS & CONDITIONS
                     </a>
                 </div>
